<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.budgetv3.ui.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_addBudgetFragment"
            app:destination="@id/navigation_add_budget"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_add_budget"
        android:name="com.example.budgetv3.ui.AddBudgetFragment"
        android:label="@string/add_budget_title"
        tools:layout="@layout/fragment_add_budget" />

    <fragment
        android:id="@+id/navigation_add_expense"
        android:name="com.example.budgetv3.ui.AddExpenseFragment"
        android:label="@string/add_expense_title"
        tools:layout="@layout/fragment_add_expense" />

</navigation>
